force-app/main/default/objects/FluentMetric_Entitlement_PermissionSet__mdt/FluentMetric_Entitlement_PermissionSet__mdt.object-meta.xml
<CustomObject>
    <description>Admin-configurable list of PermissionSet or PermissionSetGroup developer names that define the entitled-user denominator for FluentMetric AI adoption metrics. EntitlementService unions assignees of all enabled rows; missing names are dropped silently and an empty/all-fail list flips the dashboard to an &quot;all active users&quot; fallback denominator.</description>
    <label>FluentMetric Entitlement Permission Set</label>
    <pluralLabel>FluentMetric Entitlement Permission Sets</pluralLabel>
</CustomObject>