force-app/main/default/objects/FluentMetric_Entitlement_PermissionSet__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Admin-facing note about what this permission set grants and why it counts toward the entitled population.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>