force-app/main/default/objects/FluentMetric_Entitlement_PermissionSet__mdt/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <description>Identifies which Salesforce object the Source Developer Name refers to so EntitlementService can route to the correct query path. PermissionSet -> PermissionSet.Name + PermissionSetAssignment; PermissionSetGroup -> PermissionSetGroup.DeveloperName + PermissionSetAssignment; Profile -> Profile.Name + User.ProfileId.</description>
    <inlineHelpText>Choose how to resolve the Source Developer Name: against a Permission Set, a Permission Set Group, or a Profile.</inlineHelpText>
    <label>Entitlement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PermissionSet</fullName>
                <default>true</default>
                <label>Permission Set</label>
            </value>
            <value>
                <fullName>PermissionSetGroup</fullName>
                <label>Permission Set Group</label>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>