force-app/main/default/objects/FluentMetric_Entitlement_PermissionSet__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Disable a row to exclude it from the entitled-population calculation without deleting it. Lets admins keep historical context for permission sets that are no longer in use.</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>