force-app/main/default/objects/FluentMetric_Entitlement_PermissionSet__mdt/fields/Permission_Set_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Developer_Name__c</fullName>
    <description>Developer name of the entitlement source. Interpretation depends on Entitlement_Type__c: for PermissionSet use PermissionSet.Name; for PermissionSetGroup use PermissionSetGroup.DeveloperName; for Profile use Profile.Name. EntitlementService resolves the name against the matching object; missing names are dropped silently. Used to compute the entitled-user denominator for adoption metrics.</description>
    <externalId>true</externalId>
    <label>Source Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>